Add Bootstrap class